--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "copy-abi": "node scripts/copyABI.js",
+    "deploy": "hardhat run scripts/deploy.js --network ion && npm run copy-abi"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "dotenv": "^16.4.7",
