--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# Frontend files
+frontend/src/abis/*.json
