--- a/frontend_basic/public/manifest.json
+++ b/frontend_basic/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Ion Identity",
+  "name": "Create Ion Identity Sample",
   "icons": [
     {
       "src": "favicon.ico",
